--- a/nutz-plugins-websocket/pom.xml
+++ b/nutz-plugins-websocket/pom.xml
@@ -122,5 +122,11 @@
   		<version>2.9.0</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>javax.servlet-api</artifactId>
+  		<version>3.1.0</version>
+  		<scope>provided</scope>
+  	</dependency>
   </dependencies>
 </project>
