add: 添加profiler插件的beta实现

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
 		<module>nutz-integration-grpc</module>
 		<module>nutz-plugins-ml</module>
 		<module>nutz-plugins-zdoc</module>
+		
+		<module>nutz-plugins-profiler</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
