fix:处理nutzjson和swagger的兼容性问题

--- a/nutz-plugins-spring-boot-starter/demo/pom.xml
+++ b/nutz-plugins-spring-boot-starter/demo/pom.xml
@@ -9,6 +9,9 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.3.RELEASE</version>
 	</parent>
+	<properties>
+		<swagger.version>2.7.0</swagger.version>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -46,6 +49,16 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger.version}</version>
 		</dependency>
 	</dependencies>
 </project>
