fix:spring-boot jar包方式运行找不到sql

--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -28,13 +28,15 @@ spring:
      #   time-zone: GMT+8     #此处有巨坑 jackson就是要按照utc时间来给你序列化咋滴!!  
 logging:
   level:
-    root: debug
+    root: info
+    org.nutz: debug
+    demo: debug
 management:
   security:
     enabled: false
 nutz:
     json:
-        mode: full
+      date-format: yyyy-MM-dd HH:mm:ss z
     dao:
         runtime:
           add-column: true
@@ -46,6 +48,5 @@ nutz:
           basepackage: demo
         sqlmanager:
           paths:
-            - sqls
-            - other
+            - sqls/acl/user.sql
         
