--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
 		<module>nutz-plugins-slog</module>
 		<module>nutz-plugins-spring-boot-starter</module>
 		<module>nutz-plugins-cache</module>
+		<module>nutz-plugins-wkcache</module>
 		<module>nutz-plugins-hotplug</module>
 		<module>nutz-plugins-daomapping</module>
 		<module>nutz-plugins-ngrok</module>
@@ -139,10 +140,9 @@
 		<module>nutz-integration-grpc</module>
 		<module>nutz-plugins-ml</module>
 		<module>nutz-plugins-zdoc</module>
-		
 		<module>nutz-plugins-profiler</module>
-		
 		<module>nutz-integration-neo4j</module>
+		<module>nutz-plugins-wkcache</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
