--- a/nutz-plugins-event/pom.xml
+++ b/nutz-plugins-event/pom.xml
@@ -62,6 +62,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
