--- a/nutz-integration-bex5/pom.xml
+++ b/nutz-integration-bex5/pom.xml
@@ -15,9 +15,7 @@
         <dependency>
             <groupId>com.justep.bex5</groupId>
             <artifactId>biz-api</artifactId>
-            <version>3.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/biz-api.jar</systemPath>
+            <version>3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
