add:增加必要的日志

--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -48,5 +48,5 @@ nutz:
           basepackage: demo
         sqlmanager:
           paths:
-            - sqls/acl/user.sql
+            - sqls
         
