--- a/nutz-integration-json4excel/pom.xml
+++ b/nutz-integration-json4excel/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.62-SNAPSHOT</version>
+		<version>1.r.62</version>
 	</parent>
 	<artifactId>nutz-integration-json4excel</artifactId>
 	<name>nutz-integration-json4excel</name>
