--- a/nutz-maven-quickstart/pom.xml
+++ b/nutz-maven-quickstart/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.nutz</groupId>
 	<packaging>jar</packaging>
 	<name>Nutz Maven QuickStart</name>
-	<version>1.r.62-SNAPSHOT</version>
+	<version>1.r.62</version>
 	<artifactId>nutz-webapp-quickstart</artifactId>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
