--- a/nutz-plugins-cache/pom.xml
+++ b/nutz-plugins-cache/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.62-SNAPSHOT</version>
+    <version>1.r.62</version>
   </parent>
   <artifactId>nutz-plugins-cache</artifactId>
   <dependencies>
   	<dependency>
   		<groupId>org.nutz</groupId>
   		<artifactId>nutz-integration-jedis</artifactId>
-  		<version>1.r.62-SNAPSHOT</version>
+  		<version>1.r.62</version>
   	</dependency>
   	<dependency>
   		<groupId>net.sf.ehcache</groupId>
