--- a/nutz-plugins-oauth2-server/pom.xml
+++ b/nutz-plugins-oauth2-server/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>oauth2-server</artifactId>
-	<version>1.r.62-SNAPSHOT</version>
+	<version>1.r.62</version>
 	<packaging>war</packaging>
 	<name>nutz-plugins-oauth2-server</name>
 	<url>http://maven.apache.org</url>
