update: 1.r.63-SNAPSHOT 开始了

--- a/nutz-plugins-daomapping/pom.xml
+++ b/nutz-plugins-daomapping/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.62</version>
+    <version>1.r.63-SNAPSHOT</version>
   </parent>
   <artifactId>nutz-plugins-daomapping</artifactId>
   
