add: 改造原版的ip2region,添加线程安全的byte[]模式
PS: 如果原repo接受的pull req,这个插件会移除.

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
 		<module>nutz-plugins-undertow</module>
     <module>nutz-integration-bex5</module>
     <module>nutz-plugins-spring-boot-starter</module>
+    <module>nutz-plugins-ip2region</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
