--- a/nutz-plugins-ngrok/pom.xml
+++ b/nutz-plugins-ngrok/pom.xml
@@ -64,6 +64,12 @@
 		<version>2.7.19</version>
 		<scope>provided</scope>
 	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
