--- a/nutz-plugins-zcron/pom.xml
+++ b/nutz-plugins-zcron/pom.xml
@@ -9,6 +9,12 @@
 	<artifactId>nutz-plugins-zcron</artifactId>
 
 	<dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+	</dependency>
 	</dependencies>
 
 	<distributionManagement>
