--- a/nutz-plugins-zdoc/pom.xml
+++ b/nutz-plugins-zdoc/pom.xml
@@ -29,6 +29,12 @@
 			<artifactId>itext-asian</artifactId>
 			<version>5.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
