--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
     datasource:
         name: test
         #url: jdbc:h2:~/.h2db/nutz-starter;MODE=MYSQL
-        url: jdbc:mysql://139.159.228.38:3306/demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
         username: root
-        password: G00dl^ck
+        password: 123456
         # 使用druid数据源
         type: org.nutz.dao.impl.SimpleDataSource
         #driver-class-name: org.h2.Driver
@@ -23,9 +23,8 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
-   # jackson: #已使用nutzjson替代
-    #    date-format: yyyy-MM-dd HH:mm:ss Z
-     #   time-zone: GMT+8     #此处有巨坑 jackson就是要按照utc时间来给你序列化咋滴!!  
+swagger:
+  base-package: demo
 logging:
   level:
     root: info
@@ -35,8 +34,6 @@ management:
   security:
     enabled: false
 nutz:
-    json:
-      date-format: yyyy-MM-dd HH:mm:ss z
     dao:
         runtime:
           add-column: true
