add:格式的一些示例

--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -34,6 +34,7 @@ nutz:
   json:
     enabled: true
     mode: compact
+    date-format: yyyyMMdd HH:mm:ss
   dao:
     runtime:
       add-column: true
