--- a/nutz-integration-jedisque/pom.xml
+++ b/nutz-integration-jedisque/pom.xml
@@ -60,6 +60,12 @@
 	</distributionManagement>
 	<dependencies>
 		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.github.xetorthio</groupId>
 			<artifactId>jedisque</artifactId>
 			<version>0.0.4</version>
