--- a/nutz-integration-spring/pom.xml
+++ b/nutz-integration-spring/pom.xml
@@ -49,9 +49,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
+			<artifactId>spring-context</artifactId>
 			<version>5.0.0.RELEASE</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
