--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>2.2.14</version>
+			<version>2.7.22</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -73,23 +73,23 @@
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
-			<version>1.6.4</version>
+			<version>1.7</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.23</version>
+			<version>2.3.26-incubating</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.github.subchen</groupId>
 			<artifactId>jetbrick-template</artifactId>
-			<version>2.0.11</version>
+			<version>2.1.5</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
-	
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nutzcn-snapshots</id>
