add: sqltpl 插件中添加 freemarker 与 jetbrick的测试代码

--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>beetl</artifactId>
 			<version>2.7.22</version>
 			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>org.antlr</groupId>
+					<artifactId>antlr4-runtime</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -87,6 +93,17 @@
 			<artifactId>jetbrick-template</artifactId>
 			<version>2.1.5</version>
 			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>org.antlr</groupId>
+					<artifactId>antlr4-runtime</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+			<version>4.7</version>
 		</dependency>
 	</dependencies>
 
