--- a/nutz-plugins-undertow/pom.xml
+++ b/nutz-plugins-undertow/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<undertow.version>1.4.20.Final</undertow.version>
 	</properties>
 
 	<issueManagement>
@@ -42,12 +43,12 @@
 		<dependency>
 			<groupId>io.undertow</groupId>
 			<artifactId>undertow-core</artifactId>
-			<version>1.4.18.Final</version>
+			<version>${undertow.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.undertow</groupId>
 			<artifactId>undertow-servlet</artifactId>
-			<version>1.4.18.Final</version>
+			<version>${undertow.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jboss-annotations-api_1.2_spec</artifactId>
