--- a/nutz-integration-shiro/pom.xml
+++ b/nutz-integration-shiro/pom.xml
@@ -54,7 +54,8 @@
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-web</artifactId>
-			<version>1.4.0</version>
+			<version>1.3.2</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -106,7 +107,7 @@
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-ehcache</artifactId>
-			<version>1.4.0</version>
+			<version>1.3.2</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
