add:验证禁用nutz.json

--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -32,7 +32,7 @@ management:
     enabled: false
 nutz:
   json:
-    enabled: true
+    enabled: false
     mode: compact
     date-format: yyyyMMdd HH:mm:ss
   dao:
