--- a/nutz-plugins-nop/pom.xml
+++ b/nutz-plugins-nop/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.63-SNAPSHOT</version>
+		<version>1.r.63</version>
 	</parent>
 	<artifactId>nutz-plugins-nop</artifactId>
 	
