--- a/nutz-integration-activiti/demo/pom.xml
+++ b/nutz-integration-activiti/demo/pom.xml
@@ -33,17 +33,17 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.r.58</version>
+			<version>1.r.63.r2</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.39</version>
+			<version>5.1.44</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.0.26</version>
+			<version>1.1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
