--- a/nutz-integration-zbus/pom.xml
+++ b/nutz-integration-zbus/pom.xml
@@ -9,14 +9,9 @@
 	<artifactId>nutz-integration-zbus</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>org.zbus</groupId>
+			<groupId>io.zbus</groupId>
 			<artifactId>zbus</artifactId>
-			<version>7.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
-			<version>4.0.34.Final</version>
+			<version>0.11.0</version>
 		</dependency>
 	</dependencies>
 	<description>Nutz Zbus</description>
