--- a/nutz-plugins-nop/demo/nop-demo/pom.xml
+++ b/nutz-plugins-nop/demo/nop-demo/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-nop</artifactId>
-			<version>1.r.65-SNAPSHOT</version>
+			<version>1.r.63.r3</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-apidoc</artifactId>
-			<version>1.r.65-SNAPSHOT</version>
+			<version>1.r.63.r3</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
