--- a/nutz-integration-activiti/demo/pom.xml
+++ b/nutz-integration-activiti/demo/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>net.wendal</groupId>
 	<artifactId>nutz-activiti-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.r.65-SNAPSHOT</version>
+	<version>1.r.63.r3</version>
 	<name>nutzdemo Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-integration-activiti</artifactId>
-			<version>1.r.65-SNAPSHOT</version>
+			<version>1.r.63.r3</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
