--- a/nutz-integration-spring/demo/pom.xml
+++ b/nutz-integration-spring/demo/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.ywjno</groupId>
     <artifactId>nutz-spring-demo</artifactId>
     <packaging>war</packaging>
-    <version>1.r.65-SNAPSHOT</version>
+    <version>1.r.63.r3</version>
     <name>nutzdemo Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
