--- a/nutz-integration-hasor/demo/pom.xml
+++ b/nutz-integration-hasor/demo/pom.xml
@@ -63,7 +63,7 @@
             <dependency>
                 <groupId>org.nutz</groupId>
                 <artifactId>nutz-integration-hasor</artifactId>
-                <version>1.r.65-SNAPSHOT</version>
+                <version>1.r.63.r4</version>
             </dependency>
 
             <!-- Hasor -->
