--- a/nutz-plugins-event/pom.xml
+++ b/nutz-plugins-event/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.65-SNAPSHOT</version>
+		<version>1.r.63.r4</version>
 	</parent>
 	<artifactId>nutz-plugins-event</artifactId>
 	<description>Simple, lightweight and fast event bus tailored for Nutz</description>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-integration-jedis</artifactId>
-			<version>1.r.65-SNAPSHOT</version>
+			<version>1.r.63.r4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
