--- a/nutz-plugins-ngrok/pom.xml
+++ b/nutz-plugins-ngrok/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.65-SNAPSHOT</version>
+    <version>1.r.63.r4</version>
   </parent>
   <artifactId>nutz-plugins-ngrok</artifactId>
 
@@ -45,7 +45,8 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-integration-jedis</artifactId>
-			<version>1.r.65-SNAPSHOT</version>
+			<version>1.r.63.r4</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -55,7 +56,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-web</artifactId>
-			<version>1.r.65-SNAPSHOT</version>
+			<version>1.r.63</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
