--- a/nutz-plugins-wkcache/pom.xml
+++ b/nutz-plugins-wkcache/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>nutzmore</artifactId>
         <groupId>org.nutz</groupId>
-        <version>1.r.65-SNAPSHOT</version>
+        <version>1.r.63.r4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-integration-jedis</artifactId>
-            <version>1.r.65-SNAPSHOT</version>
+            <version>1.r.63.r4</version>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
