--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutzmore</artifactId>
-	<version>1.r.65-SNAPSHOT</version>
+	<version>1.r.63.r4</version>
 	<name>nutzmore</name>
 	<description>Nutz, which is a collections of lightweight frameworks, each of them can be used independently</description>
 
@@ -110,7 +110,6 @@
 		<module>nutz-integration-jedis</module>
 		<module>nutz-integration-jedisque</module>
 		<module>nutz-integration-json4excel</module>
-		<module>nutz-integration-neo4j</module>
 		<module>nutz-integration-nettice</module>
 		<module>nutz-integration-quartz</module>
 		<module>nutz-integration-rabbitmq</module>
@@ -136,7 +135,6 @@
 		<module>nutz-plugins-qrcode</module>
 		<module>nutz-plugins-sigar</module>
 		<module>nutz-plugins-slog</module>
-		<module>nutz-plugins-spring-boot-starter</module>
 		<module>nutz-plugins-sqlmanager</module>
 		<module>nutz-plugins-sqltpl</module>
 		<module>nutz-plugins-undertow</module>
@@ -147,7 +145,6 @@
 		<module>nutz-plugins-xmlentitymaker</module>
 		<module>nutz-plugins-zcron</module>
 		<module>nutz-plugins-zdoc</module>
-		<module>nutz-plugins-fiddler</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
