--- a/nutz-integration-bex5/pom.xml
+++ b/nutz-integration-bex5/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>nutzmore</artifactId>
         <groupId>org.nutz</groupId>
-        <version>1.r.65-SNAPSHOT</version>
+        <version>1.r.63.r5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
