--- a/nutz-plugins-mongodb/pom.xml
+++ b/nutz-plugins-mongodb/pom.xml
@@ -125,6 +125,6 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.65-SNAPSHOT</version>
+		<version>1.r.63.r5</version>
 	</parent>
 </project>
