--- a/nutz-plugins-qrcode/pom.xml
+++ b/nutz-plugins-qrcode/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.65-SNAPSHOT</version>
+		<version>1.r.63.r5</version>
 	</parent>
 	<artifactId>nutz-plugins-qrcode</artifactId>
 	<url>https://nutzam.com</url>
