--- a/nutz-plugins-wkcache/src/test/resources/org.nutz.plugins.wkcache/wkcache.properties
+++ b/nutz-plugins-wkcache/src/test/resources/org.nutz.plugins.wkcache/wkcache.properties
@@ -1,3 +1,3 @@
-nutzwk_cache=1800
-cache_time_1=18000
-cache_time_2=28000
+wkcache.nutzwk_cache=1800
+wkcache.cache_time_1=18000
+wkcache.cache_time_2=28000
